- add overflow:hidden to <body> to prevent spurious scrollbars

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,7 @@ body {
    width: 100vw;
    height: 100vh;
    max-height: 100vh;
+   overflow: hidden;
 }
 
 body {
